--- a/projects.json
+++ b/projects.json
@@ -2,12 +2,21 @@
 
     "projects": [
         {
-            "id": 6,
+            "id": 7,
             "title": "Retail Banking",
-            "description": "MARS Bank is a retail bank which serves individual customers, to manage their savings and current accounts.",
+            "description": "A Retail Banking System which serves individual customers, to manage their savings and current accounts.",
             "details": "Programming Language - Python <br> Framework Used - Flask <br> Database Used - SQLITE3",
             "link": "",
             "image": "img/RetailBanking.png",
+            "visibility": "hidden"
+        },
+        {
+            "id": 6,
+            "title": "Hospital Management System",
+            "description": "A Hospital Management System with the ability to register Patient, update and delete (discharge) Patient, manage the diagnostics and pharmacy for billing. Also, to be able to view Patient information and get the complete billing information.",
+            "details": "Programming Language - Python <br> Framework Used - Flask <br> Database Used - SQLITE3",
+            "link": "",
+            "image": "img/HospitalManagementSystem.png",
             "visibility": "hidden"
         },
         {
